Feat/wallet/request passphrase (#1070)
* feat: adjusted colors for account creation, new step

* feat: Almost finished. Needs testing

* fix: fix breaking build

* feat: Passphrase challenge and account activation

* chore: Updated changelog

* chore: Updated changelog

* fix: Layout for passive account

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -2,6 +2,7 @@
   "Bid Order": "Заявка за покупка",
   "Purchased Products": "Закупени продукти",
   "account": "Сметка",
+  "account_added": "Профилът е добавен успешно",
   "account_balance": "Наличност по сметка",
   "account_created": "Вашият акаунт беше създаден",
   "account_details": "Данни за сметка",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Действие",
   "activate": "Активирате",
+  "activate_hint": "Моля, подредете думите на паролата в правилния ред. По този начин потвърждавате, че сте запазили паролата в безопасност. Имайте предвид, че няма да можете да контролирате акаунта си без паролата.",
+  "activate_request_successful": "Успешно заявено активиране. Вашият акаунт ще бъде активиран след няколко момента.",
   "activation_failed": "Активирането не бе успешно:",
   "activation_success": "Успешно заявено активиране. Вашият акаунт ще бъде активиран след няколко момента.",
   "add_answer": "Добави отговор",
@@ -156,6 +159,7 @@
   "click_to_claim": "Кликнете тук, за да поискате безплатния Burst.",
   "click_to_copy_passphrase": "Кликнете тук, за да копирате паролата в клипборда",
   "click_to_refresh": "Кликнете, за да обновите",
+  "click_words": "Кликнете върху думи в правилен ред",
   "close": "Затвори",
   "comma": "запетая",
   "comment": "коментар",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Моля потвърдете дали искате да изтриете този артикул.",
   "confirm_order_cancellation": "Потвърдете анулиране на поръчката",
   "confirm_order_cancellation_help": "Ако сте сигурни, че искате да анулирате поръчката си, въведете парола за потвърждение.",
+  "confirm_passphrase": "Потвърдете паролата",
   "confirmations": "Потвърждения",
   "confirmations_short": "Подтв.",
   "confirmed": "Потвърдени",
@@ -952,6 +957,7 @@
   "transfer_asset": "Прехвърли актив",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Извършва се прехвърляне",
+  "try_again": "Опитай пак",
   "type": "Вид",
   "unconfirmed_balance": "Непотвърдено салдо",
   "unconfirmed_transaction": "Непотвърдена сделка",
@@ -968,7 +974,7 @@
   "update_available": "Налице е нова актуализация",
   "update_beta_available": "Нова експериментална версия е достъпна. Не се препоръчва да я инсталирате, освен ако не знаете какво правите.",
   "update_blockchain_downloading": "Блокверигата все още се изтегля, проверете отново след като се актуализира.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "Импортирайте съществуващия акаунт",
   "update_check": "Проверка на актуализацията",
   "update_contact": "Актуализиране на контакт",
   "update_multiple_available": "Обща и тестова версия са налични. Не се препоръчва да инсталирате тестова версия, ако не знаете какво правите.",
