--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -2,6 +2,7 @@
   "Bid Order": "Pořadí nabídek",
   "Purchased Products": "Zakoupené produkty",
   "account": "Účet",
+  "account_added": "Účet byl úspěšně přidán",
   "account_balance": "Zůstatek na účtu",
   "account_created": "Váš účet byl vytvořen",
   "account_details": "Detaily účtu",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Akce",
   "activate": "aktivovat",
+  "activate_hint": "Zařaďte slova přístupové fráze ve správném pořadí. Tímto potvrzujete, že jste heslo udržovali v bezpečí. Nezapomeňte, že bez přístupového hesla nebudete moci svůj účet ovládat.",
+  "activate_request_successful": "Aktivace byla úspěšně vyžádána. Váš účet bude aktivován za několik okamžiků.",
   "activation_failed": "Aktivace se nezdařila:",
   "activation_success": "Aktivace byla úspěšně vyžádána. Váš účet bude aktivován za několik okamžiků.",
   "add_answer": "Přidat odpověď",
@@ -156,6 +159,7 @@
   "click_to_claim": "Klikněte zde pro uplatnění nároku zdarma.",
   "click_to_copy_passphrase": "Klikněte sem a zkopírujte heslo do schránky",
   "click_to_refresh": "Klepnutím obnovíte",
+  "click_words": "Klikněte na slova ve správném pořadí",
   "close": "Zavřít",
   "comma": "Čárka",
   "comment": "Komentář",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Prosím potvrďte, pokud chcete tuto položku odstranit.",
   "confirm_order_cancellation": "Potvrdit zrušení objednávky",
   "confirm_order_cancellation_help": "Pokud jste si jisti, že chcete zrušit vaši objednávku, zadejte své heslo pro potvrzení.",
+  "confirm_passphrase": "Potvrďte přístupové fráze",
   "confirmations": "Potvrzení",
   "confirmations_short": "Conf.",
   "confirmed": "Potvrzeno",
@@ -952,6 +957,7 @@
   "transfer_asset": "Převést aktivum",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Probíhá převod",
+  "try_again": "Zkus to znovu",
   "type": "Type",
   "unconfirmed_balance": "Nepotvrzený zůstatek",
   "unconfirmed_transaction": "Nepotvrzená transakce",
@@ -968,7 +974,7 @@
   "update_available": "Nová aktualizace k dispozici",
   "update_beta_available": "A new experimental release is available. It is not recommended that you install this unless you know what you're doing.",
   "update_blockchain_downloading": "Blockchain se stále stahuje. Zkontrolujte jej prosím znovu, až bude aktuální.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "Importovat existující účet",
   "update_check": "Kontrola aktualizace",
   "update_contact": "Aktualizovat kontakt",
   "update_multiple_available": "K dispozici je jak hlavní tak experimentální verze. Není doporučeno instalovat experimentální verzi, pokud nevíte, co děláte.",
