--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -2,6 +2,7 @@
   "Bid Order": "Bid Order",
   "Purchased Products": "खरीदे हुए उत्पाद",
   "account": "खाता",
+  "account_added": "खाता सफलतापूर्वक जोड़ा गया",
   "account_balance": "खाते की शेष राशि",
   "account_created": "आपका खाता बना दिया गया है",
   "account_details": "खाता विवरण",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "क्रिया",
   "activate": "सक्रिय",
+  "activate_hint": "कृपया सही क्रम में पासफ़्रेज़ के शब्दों को व्यवस्थित करें। ऐसा करके, आप पुष्टि करते हैं कि आपने पासफ़्रेज़ को सुरक्षित रखा है। ध्यान रखें कि आप पासफ़्रेज़ के बिना अपने खाते को नियंत्रित नहीं कर पाएंगे।",
+  "activate_request_successful": "सफलतापूर्वक सक्रियण का अनुरोध किया। आपका खाता कुछ ही क्षणों में सक्रिय हो जाएगा।",
   "activation_failed": "सक्रियकरण असफल:",
   "activation_success": "सफलतापूर्वक सक्रियण का अनुरोध किया। आपका खाता कुछ ही क्षणों में सक्रिय हो जाएगा।",
   "add_answer": "उत्तर जोड़ें",
@@ -156,6 +159,7 @@
   "click_to_claim": "अपने निःशुल्क बर्स्ट का दावा करने के लिए यहां क्लिक करें।",
   "click_to_copy_passphrase": "पासफ़्रेज़ को क्लिपबोर्ड में कॉपी करने के लिए यहां क्लिक करें",
   "click_to_refresh": "ताज़ा करने के लिए क्लिक करें",
+  "click_words": "शब्दों को सही क्रम में क्लिक करें",
   "close": "बंद करें",
   "comma": "अल्पविराम",
   "comment": "टिप्पणी",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "कृपया पुष्टि करें कि यदि आप इस आइटम को हटाना चाहते हैं।",
   "confirm_order_cancellation": "आदेश रद्द करने की पुष्टि करें",
   "confirm_order_cancellation_help": "यदि आप सुनिश्चित करें कि आप अपने आदेश को रद्द करना चाहते हैं, तो यह पुष्टि करने के लिए अपने पदबंध (passphrase) लिखें।",
+  "confirm_passphrase": "पासफ़्रेज़ की पुष्टि करें",
   "confirmations": "पुष्टियों",
   "confirmations_short": "Conf.",
   "confirmed": "Confirmed",
@@ -952,6 +957,7 @@
   "transfer_asset": "परिसंपत्ति स्थानांतरण",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "स्थानांतरण जारी",
+  "try_again": "पुनः प्रयास करें",
   "type": "Type",
   "unconfirmed_balance": "Unconfirmed Balance",
   "unconfirmed_transaction": "अपुष्ट लेन-देन",
@@ -968,7 +974,7 @@
   "update_available": "नई सूचना उपलब्ध है",
   "update_beta_available": "A new experimental release is available. It is not recommended that you install this unless you know what you're doing.",
   "update_blockchain_downloading": "The blockchain is still downloading, check again after it's up to date.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "मौजूदा खाते को आयात करें",
   "update_check": "अद्यतन की जाँच करें",
   "update_contact": "संपर्क को अद्यतन",
   "update_multiple_available": "Both a general and experimental release are available. It is not recommended that you install the experimental release unless you know what you're doing.",
