--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -2,6 +2,7 @@
   "Bid Order": "Ordine di acquisto",
   "Purchased Products": "Prodotti acquistati",
   "account": "Account",
+  "account_added": "Account aggiunto correttamente",
   "account_balance": "Saldo",
   "account_created": "Il tuo account è stato creato",
   "account_details": "Dettagli account",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Azioni",
   "activate": "Attivare",
+  "activate_hint": "Si prega di disporre le parole della passphrase nell'ordine corretto. In tal modo, confermi di aver tenuto al sicuro la passphrase. Tieni presente che non sarai in grado di controllare il tuo account senza la passphrase.",
+  "activate_request_successful": "Attivazione richiesta correttamente. Il tuo account verrà attivato tra qualche istante.",
   "activation_failed": "Attivazione fallita:",
   "activation_success": "Attivazione richiesta correttamente. Il tuo account verrà attivato tra qualche istante.",
   "add_answer": "Aggiungi risposta",
@@ -156,6 +159,7 @@
   "click_to_claim": "Clicca qui per richiedere il tuo Burst gratuito.",
   "click_to_copy_passphrase": "Clicca qui per copiare la passphrase negli appunti",
   "click_to_refresh": "Clicca per aggiornare",
+  "click_words": "Fai clic sulle parole nell'ordine corretto",
   "close": "Chiudi",
   "comma": "Virgola",
   "comment": "Commento",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Si prega di confermare se si desidera eliminare questo articolo.",
   "confirm_order_cancellation": "Confermare la cancellazione dell'ordine",
   "confirm_order_cancellation_help": "Se sei sicuro di voler cancellare l'ordine, scrivi la tua passphrase per confermare.",
+  "confirm_passphrase": "Conferma passphrase",
   "confirmations": "Conferme",
   "confirmations_short": "Conf.",
   "confirmed": "Confermato",
@@ -952,6 +957,7 @@
   "transfer_asset": "Trasferisci Asset",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Trasferimento In corso",
+  "try_again": "Riprova",
   "type": "Tipo",
   "unconfirmed_balance": "Saldo non confermato",
   "unconfirmed_transaction": "Transazione non confermata",
@@ -968,7 +974,7 @@
   "update_available": "Nuovo aggiornamento disponibile",
   "update_beta_available": "È disponibile una nuova versione sperimentale. Non è consigliabile installarla se non sai cosa stai facendo.",
   "update_blockchain_downloading": "Il blockchain sta ancora scaricando, controllare nuovamente appena sarà aggiornato.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "Importa account esistente",
   "update_check": "Controllo dell'aggiornamento",
   "update_contact": "Aggiorna contatto",
   "update_multiple_available": "Sia un rilascio generale che uno sperimentale sono disponibili. Non è consigliabile installare il rilascio sperimentale se non si è certi di cosa si stia facendo.",
