--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -2,6 +2,7 @@
   "Bid Order": "Zlecenie kupna",
   "Purchased Products": "Kupione produkty",
   "account": "Konto",
+  "account_added": "Konto zostało dodane pomyślnie",
   "account_balance": "Balans konta",
   "account_created": "Twoje konto zostało utworzone",
   "account_details": "Szczegóły konta",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Działania",
   "activate": "Aktywuj",
+  "activate_hint": "Ułóż słowa hasła w odpowiedniej kolejności. W ten sposób potwierdzasz, że Twoje hasło jest bezpieczne. Pamiętaj, że bez hasła nie będziesz w stanie kontrolować swojego konta.",
+  "activate_request_successful": "Pomyślnie zażądano aktywacji. Twoje konto zostanie aktywowane za kilka chwil.",
   "activation_failed": "Aktywacja nie powiodła się:",
   "activation_success": "Pomyślnie zażądano aktywacji. Twoje konto zostanie aktywowane za kilka chwil.",
   "add_answer": "Dodaj pytanie",
@@ -156,6 +159,7 @@
   "click_to_claim": "Kliknij tutaj, aby odebrać darmowy Burst.",
   "click_to_copy_passphrase": "Kliknij tutaj, aby skopiować hasło do schowka",
   "click_to_refresh": "Kliknij, aby odświeżyć",
+  "click_words": "Klikaj słowa we właściwej kolejności",
   "close": "Zamknij",
   "comma": "Przecinek",
   "comment": "Komentarz",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Potwierdź czy chcesz usunąć tą pozycje.",
   "confirm_order_cancellation": "Potwierdź anulowanie zlecenia",
   "confirm_order_cancellation_help": "Jeśli chcesz anulować zlecenie, wpisz hasło dla potwierdzenia.",
+  "confirm_passphrase": "Potwierdź hasło",
   "confirmations": "Potwierdzenia",
   "confirmations_short": "Potw.",
   "confirmed": "Potwierdzony",
@@ -961,6 +966,7 @@
   "transfer_asset": "Transfer aktywa",
   "transfer_history": "Historia transferów",
   "transfer_in_progress": "Transfer w toku",
+  "try_again": "Spróbuj ponownie",
   "type": "Typ",
   "unconfirmed_balance": "Niepotwierdzony balans",
   "unconfirmed_transaction": "Niepotwierdzona transakcja",
@@ -977,7 +983,7 @@
   "update_available": "Nowa aktualizacja dostępna",
   "update_beta_available": "Dostępna jest nowa eksperymentalna wersja oprogramowania. Nie rekomendowana jest instalacja chyba że wiesz co robisz.",
   "update_blockchain_downloading": "Blockchain jest jeszcze pobierane, sprawdź później gdy pobieranie się zakończy.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "Zaimportuj istniejące konto",
   "update_check": "Aktualizuj czek",
   "update_contact": "Uaktualnij kontakt",
   "update_multiple_available": "Dostępne są nowe wersje oprogramowania, eksperymentalna i normalna. Nie rekomendowana jest instalacja wersji eksperymentalnej chyba że wiesz co robisz.",
