--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -2,6 +2,7 @@
   "Bid Order": "Ordin Cumpărare",
   "Purchased Products": "Produse achiziționate",
   "account": "Cont",
+  "account_added": "Contul a fost adăugat cu succes",
   "account_balance": "Sold disponibil în cont",
   "account_created": "Contul dvs. a fost creat",
   "account_details": "Detalii cont",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Acțiuni",
   "activate": "Activati",
+  "activate_hint": "Vă rugăm să aranjați cuvintele frazei în ordinea corectă. Procedând astfel, confirmați că ați păstrat parola în siguranță. Rețineți că nu veți putea controla contul fără parola.",
+  "activate_request_successful": "Activarea solicitată cu succes. Contul dvs. va fi activat în câteva momente.",
   "activation_failed": "Activarea a eșuat:",
   "activation_success": "Activarea solicitată cu succes. Contul dvs. va fi activat în câteva momente.",
   "add_answer": "Adaugă răspuns",
@@ -156,6 +159,7 @@
   "click_to_claim": "Faceți clic aici pentru a revendica explozia liberă.",
   "click_to_copy_passphrase": "Faceți clic aici pentru a copia fraza de acces în clipboard",
   "click_to_refresh": "Faceți clic pentru a actualiza",
+  "click_words": "Faceți clic pe cuvinte în ordine corectă",
   "close": "Închidere",
   "comma": "Virgulă",
   "comment": "cometariu",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Confirmă dacă dorești să ștergi acest articol.",
   "confirm_order_cancellation": "Confirmă Anulare Ordin",
   "confirm_order_cancellation_help": "Dacă ești sigur că dorești să anulezi ordinul, tastează parola ta pentru a confirma.",
+  "confirm_passphrase": "Confirmați fraza de acces",
   "confirmations": "Confirmări",
   "confirmations_short": "Conf.",
   "confirmed": "Confirmat",
@@ -952,6 +957,7 @@
   "transfer_asset": "Transferă Activa",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Transfer în Curs",
+  "try_again": "Încearcă din nou",
   "type": "Type",
   "unconfirmed_balance": "Sold Neconfirmat",
   "unconfirmed_transaction": "Tranzacţie Neconfirmată",
@@ -968,7 +974,7 @@
   "update_available": "Este disponibilă o nouă actualizare",
   "update_beta_available": "Ai la dispoziţie o nouă versiune experimentală. Nu este recomandat să o instalezi dacă nu ştii ce faci.",
   "update_blockchain_downloading": "Blockchain-ul este încă în descărcare, verifică din nou după ce este actualizat.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "Importați contul existent",
   "update_check": "Verificare de actualizare",
   "update_contact": "Actualizare Contact",
   "update_multiple_available": "Aveţi la dispoziţie o eliberare de versiuni generală şi experimentală. Nu este recomandat să instalaţi versiunea experimentală dacă nu ştiți ce faceți.",
