--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -2,6 +2,7 @@
   "Bid Order": "Ордер на продажу",
   "Purchased Products": "Купленные товары",
   "account": "Аккаунт",
+  "account_added": "Аккаунт успешно добавлен",
   "account_balance": "Баланс аккаунта",
   "account_created": "Ваш аккаунт был создан",
   "account_details": "Детали аккаунта",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Действия",
   "activate": "Активировать",
+  "activate_hint": "Пожалуйста, расположите слова парольной фразы в правильном порядке. Тем самым вы подтверждаете, что сохранили пароль. Имейте в виду, что вы не сможете управлять своей учетной записью без ключевой фразы.",
+  "activate_request_successful": "Успешно запрошена активация. Ваш аккаунт будет активирован через несколько секунд.",
   "activation_failed": "Активация не удалось:",
   "activation_success": "Успешно запрошена активация. Ваш аккаунт будет активирован через несколько секунд.",
   "add_answer": "Добавить Ответ",
@@ -156,6 +159,7 @@
   "click_to_claim": "Нажмите здесь, чтобы получить бесплатный взрыв.",
   "click_to_copy_passphrase": "Нажмите здесь, чтобы скопировать пароль в буфер обмена",
   "click_to_refresh": "Нажмите, чтобы обновить",
+  "click_words": "Нажмите слова в правильном порядке",
   "close": "Закрыть",
   "comma": "запятая",
   "comment": "Комментарий",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Пожалуйста, подтвердите, если вы действительно хотите удалить этот элемент.",
   "confirm_order_cancellation": "Подтверждение отмены ордера",
   "confirm_order_cancellation_help": "Если вы уверены, что вы хотите отменить ваш ордер, введите ваш пароль для подтверждения.",
+  "confirm_passphrase": "Подтвердите пароль",
   "confirmations": "Подтверждения",
   "confirmations_short": "Конфигурация.",
   "confirmed": "Подтверждено",
@@ -952,6 +957,7 @@
   "transfer_asset": "Передать активы",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Передача в процессе",
+  "try_again": "Попробуйте еще раз",
   "type": "Тип",
   "unconfirmed_balance": "Неподтвержденный баланс",
   "unconfirmed_transaction": "Неподтвержденная транзакция",
@@ -968,7 +974,7 @@
   "update_available": "Доступно новое обновление",
   "update_beta_available": "Доступна новая эксперементальная версия. Не рекомендуется устанавливать, если вы не уверены.",
   "update_blockchain_downloading": "Blockchain еще загружается, проверьте еще раз после того, как он обновится.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "Импортировать существующий аккаунт",
   "update_check": "Проверка обновления",
   "update_contact": "Обновить контакт",
   "update_multiple_available": "Доступны как основной, так и экспериментальный выпуски. Не рекомендуется устанавливать экспериментальный выпуск, если вы не знаете, что вы делаете.",
