--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -2,6 +2,7 @@
   "Bid Order": "Nákupný príkaz",
   "Purchased Products": "Zakúpené produkty",
   "account": "Účet",
+  "account_added": "Účet bol úspešne pridaný",
   "account_balance": "Zostatok na účte",
   "account_created": "Váš účet bol vytvorený",
   "account_details": "Detaily účtu",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Akcie",
   "activate": "Aktivovať",
+  "activate_hint": "Usporiadajte slová prístupovej frázy v správnom poradí. Týmto potvrdzujete, že ste prístupovú frázu uchovali v bezpečí. Nezabudnite, že bez prístupovej frázy nebudete môcť ovládať svoj účet.",
+  "activate_request_successful": "Aktivácia bola úspešne vyžiadaná. Váš účet bude aktivovaný o chvíľu.",
   "activation_failed": "Aktivácia zlyhala:",
   "activation_success": "Aktivácia bola úspešne vyžiadaná. Váš účet bude aktivovaný o chvíľu.",
   "add_answer": "Pridať odpoveď",
@@ -156,6 +159,7 @@
   "click_to_claim": "Kliknite tu, aby ste si uplatnili nárok na bezplatný burst.",
   "click_to_copy_passphrase": "Kliknutím sem skopírujete prístupovú frázu do schránky",
   "click_to_refresh": "Kliknutím obnovíte",
+  "click_words": "Kliknite na slová v správnom poradí",
   "close": "Zavrieť",
   "comma": "čiarka",
   "comment": "komentár",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Potvrďte prosím, ak chcete odstrániť túto položku.",
   "confirm_order_cancellation": "Potvrdiť zrušenie príkazu",
   "confirm_order_cancellation_help": "Ak ste si istý, že chcete zrušiť váš príkaz, zadajte svoje heslo pre potvrdenie.",
+  "confirm_passphrase": "Potvrďte prístupovú frázu",
   "confirmations": "Potvrdenia",
   "confirmations_short": "Konf.",
   "confirmed": "Potvrdené",
@@ -952,6 +957,7 @@
   "transfer_asset": "Previesť majetok",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Prebieha prenos",
+  "try_again": "Skúste to znova",
   "type": "Typ",
   "unconfirmed_balance": "Nepotvrdený zostatok",
   "unconfirmed_transaction": "Nepotvrdená transakcia",
@@ -968,7 +974,7 @@
   "update_available": "K dispozícii je nová aktualizácia",
   "update_beta_available": "Nová experimentálna verzia je k dispozícii. Neodporúča sa aby ste si to nainštalovali, pokiaľ neviete, čo robíte.",
   "update_blockchain_downloading": "Blockchain sa stále sťahuje, skontrolujte znova keď už bude aktuálny.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "Importovať existujúci účet",
   "update_check": "Aktualizovať kontrolu",
   "update_contact": "Aktualizovať kontakt",
   "update_multiple_available": "K dispozícii sú hlavná aj experimentálna verzia. Neodporúča sa inštalovať experimentálnu verziu, ak neviete, čo robíte.",
