--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -2,6 +2,7 @@
   "Bid Order": "Ordre de Compra",
   "Purchased Products": "Productes adquirits",
   "account": "Compte",
+  "account_added": "El compte s'ha afegit correctament",
   "account_balance": "Saldo del compte",
   "account_created": "El teu compte ha estat creat",
   "account_details": "Detalls del compte",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Accions",
   "activate": "Activa",
+  "activate_hint": "Organitza les paraules de la frase de contrasenya en l'ordre correcte. En fer-ho, confirmeu que heu mantingut la contrasenya segura. Tingueu en compte que no podreu controlar el vostre compte sense la paraula de contrasenya.",
+  "activate_request_successful": "S'ha sol·licitat l'activació amb èxit. El vostre compte s’activarà en pocs moments.",
   "activation_failed": "L'activació ha fallat:",
   "activation_success": "S'ha sol·licitat l'activació amb èxit. El vostre compte s’activarà en pocs moments.",
   "add_answer": "Afegir una resposta",
@@ -156,6 +159,7 @@
   "click_to_claim": "Feu clic aquí per reclamar la vostra explosió gratuïta.",
   "click_to_copy_passphrase": "Feu clic aquí per copiar la contrasenya al porta-retalls",
   "click_to_refresh": "Feu clic per actualitzar",
+  "click_words": "Feu clic a les paraules en ordre correcte",
   "close": "Tancar",
   "comma": "Coma",
   "comment": "Comentari",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Si us plau, confirmeu si voleu suprimir aquest article.",
   "confirm_order_cancellation": "Confirmar la Cancel·lació de l'Ordre",
   "confirm_order_cancellation_help": "Si esteu segurs que voleu cancel·lar la comanda, escrigui la seva contrasenya per confirmar.",
+  "confirm_passphrase": "Confirmeu la paraula de pas",
   "confirmations": "Confirmacions",
   "confirmations_short": "Conf.",
   "confirmed": "Confirmat",
@@ -952,6 +957,7 @@
   "transfer_asset": "Transferir Actiu",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Transferència en Curs",
+  "try_again": "Proveu de nou",
   "type": "Type",
   "unconfirmed_balance": "Saldo sense confirmar",
   "unconfirmed_transaction": "Transacció Sense Confirmar",
@@ -968,7 +974,7 @@
   "update_available": "Nova actualització disponible",
   "update_beta_available": "Hi ha una nova versió experimental. No es recomana que l'instal·leu llevat de que sapigueu el què esteu fent.",
   "update_blockchain_downloading": "La Cadena de Blocs s'està descarregant, torni a provar quan estigui actualitzada.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "Importa el compte existent",
   "update_check": "Actualització de la comprovació",
   "update_contact": "Actualitzar Contacte",
   "update_multiple_available": "Hi ha disponible una versió general i una experimental. No és recomanable que instal·leu la versió experimental llevat que sapigueu el què esteu fent.",
