--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -2,6 +2,7 @@
   "Bid Order": "Bid Order",
   "Purchased Products": "Purchased Products",
   "account": "Account",
+  "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_created": "Your account has been created",
   "account_details": "Account Details",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Actions",
   "activate": "Activate",
+  "activate_hint": "Please arrange the words of the passphrase in the correct order. By doing so, you confirm that you have kept the passphrase safe. Keep in mind that you won't be able to control your account without the passphrase.",
+  "activate_request_successful": "Successfully requested activation. Your account will be activated in a few moments.",
   "activation_failed": "Activation failed: ",
   "activation_success": "Successfully requested activation. Your account will be activated in a few moments.",
   "add_answer": "Add Answer",
@@ -156,6 +159,7 @@
   "click_to_claim": "Click here to claim your free Burst.",
   "click_to_copy_passphrase": "Click here to copy the passphrase into the clipboard",
   "click_to_refresh": "Click to refresh",
+  "click_words": "Click words in correct order",
   "close": "Close",
   "comma": "Comma",
   "comment": "Comment",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Please confirm if you want to delete this item.",
   "confirm_order_cancellation": "Confirm Order Cancellation",
   "confirm_order_cancellation_help": "If you are sure you want to cancel your order, type your passphrase to confirm.",
+  "confirm_passphrase": "Confirm passphrase",
   "confirmations": "Confirmations",
   "confirmations_short": "Conf.",
   "confirmed": "Confirmed",
@@ -965,6 +970,7 @@
   "transfer_asset": "Transfer Asset",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Transfer In Progress",
+  "try_again": "Try Again",
   "type": "Type",
   "unconfirmed_balance": "Unconfirmed Balance",
   "unconfirmed_transaction": "Unconfirmed Transaction",
@@ -981,7 +987,7 @@
   "update_available": "New update available",
   "update_beta_available": "A new experimental release is available. It is not recommended that you install this unless you know what you're doing.",
   "update_blockchain_downloading": "The blockchain is still downloading, check again after it's up to date.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "Import existing account",
   "update_check": "Update Check",
   "update_contact": "Update Contact",
   "update_multiple_available": "Both a general and experimental release are available. It is not recommended that you install the experimental release unless you know what you're doing.",
