--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -2,6 +2,7 @@
   "Bid Order": "Tawaran Memesan",
   "Purchased Products": "Produk-produk yang dibeli",
   "account": "Account",
+  "account_added": "Akun berhasil ditambahkan",
   "account_balance": "Saldo Akun",
   "account_created": "Akun anda telah dibuat",
   "account_details": "Detail catatan",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Tindakan",
   "activate": "Mengaktifkan",
+  "activate_hint": "Harap atur kata-kata frasa sandi dalam urutan yang benar. Dengan melakukan itu, Anda mengonfirmasi bahwa Anda telah menyimpan kata sandi dengan aman. Ingatlah bahwa Anda tidak akan dapat mengendalikan akun Anda tanpa frasa sandi.",
+  "activate_request_successful": "Aktivasi berhasil diminta. Akun Anda akan diaktifkan dalam beberapa saat.",
   "activation_failed": "Aktivasi gagal:",
   "activation_success": "Aktivasi berhasil diminta. Akun Anda akan diaktifkan dalam beberapa saat.",
   "add_answer": "Tambahkan jawaban",
@@ -156,6 +159,7 @@
   "click_to_claim": "Klik di sini untuk mengklaim Burst gratis Anda.",
   "click_to_copy_passphrase": "Klik di sini untuk menyalin frasa sandi ke clipboard",
   "click_to_refresh": "Klik untuk menyegarkan",
+  "click_words": "Klik kata dalam urutan yang benar",
   "close": "Tutup",
   "comma": "Koma",
   "comment": "Komentar",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Silakan konfirmasi jika Anda ingin menghapus item ini.",
   "confirm_order_cancellation": "Konfirmasikan pembatalan pesanan",
   "confirm_order_cancellation_help": "Jika Anda yakin Anda ingin membatalkan pesanan Anda, ketik kata sandi untuk mengkonfirmasi.",
+  "confirm_passphrase": "Konfirmasikan frasa sandi",
   "confirmations": "Konfirmasi",
   "confirmations_short": "Konfirmasi",
   "confirmed": "Dikonfirmasi",
@@ -952,6 +957,7 @@
   "transfer_asset": "Transfer Aset",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Mentransfer dalam kemajuan",
+  "try_again": "Coba lagi",
   "type": "Tipe",
   "unconfirmed_balance": "Saldo yang belum dikonfirmasi",
   "unconfirmed_transaction": "Transaksi yang belum dikonfirmasi",
@@ -968,7 +974,7 @@
   "update_available": "Pembaruan baru tersedia",
   "update_beta_available": "Percobaan rilis baru tersedia. Hal ini tidak dianjurkan bahwa Anda menginstal ini kecuali Anda adalah seorang ahli.",
   "update_blockchain_downloading": "Blockchain masih mengunduh, periksa kembali setelah selesai.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "Impor akun yang ada",
   "update_check": "Perbarui Periksa",
   "update_contact": "Memperbarui Kontak",
   "update_multiple_available": "Seorang jenderal dan versi percobaan tersedia. Hal ini tidak dianjurkan bahwa Anda menginstal versi percobaan kecuali Anda adalah seorang ahli.",
