--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -2,6 +2,7 @@
   "Bid Order": "Ordem de compra",
   "Purchased Products": "Produtos adquiridos",
   "account": "Conta",
+  "account_added": "Conta adicionada com sucesso",
   "account_balance": "Saldo da conta",
   "account_created": "Sua conta foi criada",
   "account_details": "Detalhes da conta",
@@ -13,6 +14,8 @@
   "accounts": "Contas",
   "actions": "Ações",
   "activate": "Ativar",
+  "activate_hint": "Organize as palavras da senha na ordem correta. Ao fazer isso, você confirma que manteve a senha segura. Lembre-se de que você não poderá controlar sua conta sem a senha.",
+  "activate_request_successful": "Ativação solicitada com sucesso. Sua conta será ativada em alguns instantes.",
   "activation_failed": "Ativação falhou:",
   "activation_success": "Ativação solicitada com sucesso. Sua conta será ativada em alguns instantes.",
   "add_answer": "Adicionar Resposta",
@@ -156,6 +159,7 @@
   "click_to_claim": "Clique aqui para ganhar seu Burst grátis.",
   "click_to_copy_passphrase": "Clique aqui para copiar a frase secreta na área de transferência",
   "click_to_refresh": "Clique para atualizar",
+  "click_words": "Clique nas palavras na ordem correta",
   "close": "Fechar",
   "comma": "Vírgula",
   "comment": "Comente",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Por favor confirme se deseja eliminar este item.",
   "confirm_order_cancellation": "Confirmar o Cancelamento da Ordem",
   "confirm_order_cancellation_help": "Se tiver certeza que deseja cancelar a sua ordem, digite a sua senha para confirmar.",
+  "confirm_passphrase": "Confirmar senha",
   "confirmations": "Confirmações",
   "confirmations_short": "Conf.",
   "confirmed": "Confirmado",
@@ -956,6 +961,7 @@
   "transfer_asset": "Transferir o ativo",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Transferência em andamento",
+  "try_again": "Tente novamente",
   "type": "Type",
   "unconfirmed_balance": "Saldo não confirmado",
   "unconfirmed_transaction": "Transação não confirmada",
@@ -972,7 +978,7 @@
   "update_available": "Nova atualização disponível",
   "update_beta_available": "Uma nova versão experimental está disponível. Não é recomendável que você a instale a não ser que você saiba o que está fazendo.",
   "update_blockchain_downloading": "A corrente de blocos ainda está sendo baixada, verifique novamente após estar atualizada.",
-  "update_burst_account": "Update your Burst account",
+  "update_burst_account": "Importar conta existente",
   "update_check": "Verificar atualização",
   "update_contact": "Atualizar o contato",
   "update_multiple_available": "Tanto a versão geral como a experimental estão disponíveis. Não é recomendável que você instale a versão experimental, a menos que você saiba o que está fazendo.",
